<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".update_user_profile">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="20dp"
        android:background="#976AE2"
        android:onClick="onUpdateClick"
        android:text="@string/btn_update_profile"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="373dp"
        android:layout_height="440dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:text="@string/first_name" />
            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="437dp" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_no" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/contact_no"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Address" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Address"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/txt_postal_code" />

            <EditText
                android:id="@+id/postalCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_postal_code"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/reenter_password" />

            <EditText
                android:id="@+id/rePwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_update_profile"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>