<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#976AE2"
        android:onClick="onLogOutClick"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#976AE2"
        android:onClick="onUpdateClick"
        android:text="@string/btn_update_profile"
        app:layout_constraintBaseline_toBaselineOf="@+id/button17"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#976AE2"
        android:onClick="onDeleteAccountClick"
        android:text="@string/btn_delete_profile"
        app:layout_constraintBaseline_toBaselineOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toEndOf="@+id/button14" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#976AE2"
        android:onClick="onManageMyOrdersClick"
        android:text="@string/btnManagerMyOrders"
        app:layout_constraintBaseline_toBaselineOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="126dp"
        android:layout_height="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        app:srcCompat="@drawable/profile_pic" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="351dp"
        android:layout_height="390dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="437dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="437dp" />

            <TextView
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/contact_no" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/txt_postal_code" />

            <TextView
                android:id="@+id/postalCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address" />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"

                android:gravity="center"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="459dp" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>