<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97410588"
    tools:context=".Users">

    <Button
        android:id="@+id/btn_view"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/view_users"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_remove" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:text="@string/add_user"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/remove_user"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_user"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/manage_users"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>